adding to the readme

--- a/src/components/Account.css
+++ b/src/components/Account.css
@@ -87,7 +87,7 @@
       width: 90%;
       padding-bottom: 10px;
       padding-left: 10px;
-      height: 207px;
+      height: 40.75vh;
   }
   
   .accountLinks a {
